--- a/app/scheduler/scheduler.html
+++ b/app/scheduler/scheduler.html
@@ -1,4 +1,4 @@
-<div flex style="min-width: 1300px;" ng-controller="SchedulerCtrl">
+<div flex style="min-width: 1300px;" ng-controller="SchedulerCtrl as vm">
 
     <div layout="horizontal" flex>
 
@@ -9,7 +9,7 @@
                     <div class="md-toolbar-tools">
                         <span>Schedule Drafts</span>
                         <span flex></span>
-                        <md-button md-theme="default" aria-label="Create A Draft" style="margin-right: 17px;" class="md-fab md-primary md-button-fab-small" ng-click="addDraftSchedule()">
+                        <md-button md-theme="default" aria-label="Create A Draft" style="margin-right: 17px;" class="md-fab md-primary md-button-fab-small" ng-click="vm.addDraftSchedule()">
                             <span class="fa fa-plus"></span>
                             <md-tooltip>Create A Schedule Draft</md-tooltip>
                         </md-button>
@@ -17,8 +17,8 @@
                 </md-toolbar>
                 <md-list id="schedule-draft-data-list-id" class="md-whiteframe-z1" style="padding: 0; direction: rtl">
 
-                    <md-item ng-repeat="item in scheduleDraftData track by item.id" ng-click="setSelectedScheduleDraft(item)"
-                             ng-class="{'selected-schedule-row': item === selectedScheduleDraft}">
+                    <md-item ng-repeat="item in vm.scheduleDraftData track by item.id" ng-click="vm.setSelectedScheduleDraft(item)"
+                             ng-class="{'selected-schedule-row': item === vm.selectedScheduleDraft}">
                         <md-item-content>
                             <div class="md-tile-content schedule-draft-item" style="padding: 2px; min-width: 1050px; direction: ltr" layout="horizontal" layout-align="center center">
 
@@ -31,26 +31,26 @@
 
                                 <md-button aria-label="Select a Date and Time" style="width: 122px;" class="dropdown-toggle schedule-item-input" type="button"
                                            data-toggle="dropdown"
-                                           ng-click="openTypePicker($index, $event);">
+                                           ng-click="vm.openTypePicker($index, $event);">
                                     {{item.type}}
                                     <span flex></span>
                                     <span class="caret"></span>
                                 </md-button>
                                 <md-button aria-label="Select a Date and Time" style="margin-left: 5px; width: 180px;" class="schedule-item-input"
-                                           ng-click="openDatePicker($index, $event);">
+                                           ng-click="vm.openDatePicker($index, $event);">
                                     <span ng-if="item.desiredTime">{{item.desiredTime}}</span>
                                     <span ng-if="!item.desiredTime">Select Time</span>
                                     <span class="caret"></span>
                                 </md-button>
 
                                 <md-button md-theme="default" aria-label="Move Draft To Schedule" style="margin-left: 10px;" class="md-fab md-button-fab-small"
-                                           ng-click="moveDraftRowToSchedule($index)">
+                                           ng-click="vm.moveDraftRowToSchedule($index)">
                                     <span class="fa fa-chevron-down md-fab-fa-icon-small"></span>
                                     <md-tooltip>
                                         Move Draft to Schedule
                                     </md-tooltip>
                                 </md-button>
-                                <md-button md-theme="red" aria-label="Delete Draft" style="margin-left: 10px;" class="md-fab md-primary md-button-fab-small" ng-click="removeDraftRow($index)">
+                                <md-button md-theme="red" aria-label="Delete Draft" style="margin-left: 10px;" class="md-fab md-primary md-button-fab-small" ng-click="vm.removeDraftRow($index)">
                                     <span class="fa fa-minus md-fab-fa-icon-small"></span>
                                     <md-tooltip>
                                         Delete Draft
@@ -71,8 +71,8 @@
 
                 <md-list class="" style="padding: 0;">
 
-                    <md-item ng-repeat="item in scheduleData track by item.id" ng-click="setSelectedSchedule(item)"
-                             ng-class="{'selected-schedule-row': item === scheduleData}">
+                    <md-item ng-repeat="item in vm.scheduleData track by item.id" ng-click="vm.setSelectedSchedule(item)"
+                             ng-class="{'selected-schedule-row': item === vm.scheduleData}">
                         <md-item-content>
                             <div class="md-tile-content schedule-draft-item" style="padding: 8px;">
                                 <span class="schedule-block-id">{{item.id}}:</span>
@@ -104,22 +104,22 @@
                     <span>Schedule Block Details</span>
                 </div>
             </md-toolbar>
-            <div flex style="padding: 0px 0px 0px 24px;" ng-class="{'highlight-script-window-with-box-shadow': selectedScheduleDraft !== null}">
-                <div flex style="padding: 8px; height: 915px; background-color: #ECEFF1;" ng-class="{'highlight-script-window': selectedScheduleDraft !== null, 'md-whiteframe-z2': selectedScheduleDraft === null}">
-                    <textarea class="schedule-script-text-area" cols="60" rows="30" ng-model="selectedScheduleDraft.script" ng-show="selectedScheduleDraft !== null" ng-maxlength="8000"></textarea>
+            <div flex style="padding: 0px 0px 0px 24px;" ng-class="{'highlight-script-window-with-box-shadow': vm.selectedScheduleDraft !== null}">
+                <div flex style="padding: 8px; height: 915px; background-color: #ECEFF1;" ng-class="{'highlight-script-window': vm.selectedScheduleDraft !== null, 'md-whiteframe-z2': vm.selectedScheduleDraft === null}">
+                    <textarea class="schedule-script-text-area" cols="60" rows="30" ng-model="vm.selectedScheduleDraft.script" ng-show="vm.selectedScheduleDraft !== null" ng-maxlength="8000"></textarea>
                 </div>
             </div>
         </div>
 
 
-        <div id="schedulerDatePickerMenu" class="datepickerMenu md-whiteframe-z1" ng-show="showDatePicker">
-            <datetimepicker data-ng-model="currentSelectedDate" data-on-set-time="onTimeSet(newDate, oldDate)"></datetimepicker>
+        <div id="schedulerDatePickerMenu" class="datepickerMenu md-whiteframe-z1" ng-show="vm.showDatePicker">
+            <datetimepicker data-ng-model="vm.currentSelectedDate" data-on-set-time="vm.onTimeSet(newDate, oldDate)"></datetimepicker>
         </div>
 
-        <div id="schedulerTypePickerMenu" ng-show="showTypePicker" class="datepickerMenu md-whiteframe-z1">
+        <div id="schedulerTypePickerMenu" ng-show="vm.showTypePicker" class="datepickerMenu md-whiteframe-z1">
             <md-list>
-                <md-item ng-repeat="type in types">
-                    <button ink-ripple role="menuitem" class="menu-item" ng-click="setScheduleDraftType(type)">{{type}}</button>
+                <md-item ng-repeat="type in vm.types">
+                    <button ink-ripple role="menuitem" class="menu-item" ng-click="vm.setScheduleDraftType(type)">{{type}}</button>
                 </md-item>
             </md-list>
         </div>
