--- a/app/widgets/gantt/gantt-widget.html
+++ b/app/widgets/gantt/gantt-widget.html
@@ -1,14 +1,14 @@
-<div class="panel panel-default" style="box-shadow: none;" ng-controller="GanttWidgetCtrl">
+<div class="panel panel-default" style="box-shadow: none;" ng-controller="GanttWidgetCtrl as vm">
 
     <div class="panel-heading">
         <!--<h3>Current Schedule Blocks</h3>-->
 
         <div class="">
             <span class="">Scale</span>
-            <select class="form-control" style="display: inline; width: 100px;" ng-model="scale"
+            <select class="form-control" style="display: inline; width: 100px;" ng-model="vm.scale"
                     ng-options="s for s in ['hour', 'day', 'week', 'month']"></select>
             <span class="">Sort</span>
-            <select class="form-control" style="display: inline; width: 100px;" ng-model="mode"
+            <select class="form-control" style="display: inline; width: 100px;" ng-model="vm.mode"
                     ng-options="m for m in ['name', 'date', 'custom']"></select>
         </div>
     </div>
@@ -18,16 +18,16 @@
                load-data="loadData = fn"
                remove-data="removeData = fn"
                clear-data="clearData = fn"
-               sort-mode="mode"
-               view-scale="scale"
-               column-width="scale === 'month' && 20 || (scale === 'week' && 10 || 4)"
-               column-sub-scale="scale === 'week' && 7 || 6"
+               sort-mode="vm.mode"
+               view-scale="vm.scale"
+               column-width="vm.scale === 'month' && 20 || (vm.scale === 'week' && 10 || 4)"
+               column-sub-scale="vm.scale === 'week' && 7 || 6"
                work-hours="[0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23]"
-               show-non-work-hours="showNonWorkHours"
+               show-non-work-hours="vm.showNonWorkHours"
                weekend-days="[0,6]"
-               show-weekends="showWeekends"
-               max-height="maxHeight"
-               on-gantt-ready="ganttInitialized()"
+               show-weekends="vm.showWeekends"
+               max-height="vm.maxHeight"
+               on-gantt-ready="vm.ganttInitialized()"
                on-label-clicked="labelEvent(event)"
                on-label-dbl-clicked="labelEvent(event)"
                on-label-context-clicked="labelEvent(event)"
