--- a/app/widgets/navigation/navigation-widget.html
+++ b/app/widgets/navigation/navigation-widget.html
@@ -1,29 +1,16 @@
 <section layout-align="center center" class="navigation-buttons" md-theme="blue">
 
-    <md-button aria-label="Operator Control" class="md-raised md-primary" ng-click="stateGo('operatorControl')">Operator Control</md-button>
-    <md-button aria-label="Alarms" class="md-raised md-primary" ng-click="stateGo('alarms')">Alarms</md-button>
-    <md-button aria-label="Health and State" class="md-raised md-primary" ng-click="stateGo('health')">Health and State</md-button>
+    <md-button aria-label="Operator Control" class="md-raised md-primary" ng-click="vm.stateGo('operatorControl')">Operator Control</md-button>
+    <md-button aria-label="Alarms" class="md-raised md-primary" ng-click="vm.stateGo('alarms')">Alarms</md-button>
+    <md-button aria-label="Health and State" class="md-raised md-primary" ng-click="vm.stateGo('health')">Health and State</md-button>
 
 
-    <md-button aria-label="Scheduler" class="md-raised md-primary" ng-click="stateGo('scheduler')">Scheduler</md-button>
-    <md-button aria-label="Weather" class="md-raised md-primary" ng-click="stateGo('weather')">Weather</md-button>
-    <md-button aria-label="Sensor Graphs" class="md-raised md-primary" ng-click="stateGo('sensorGraph')">Sensor Graphs</md-button>
+    <md-button aria-label="Scheduler" class="md-raised md-primary" ng-click="vm.stateGo('scheduler')">Scheduler</md-button>
+    <md-button aria-label="Weather" class="md-raised md-primary" ng-click="vm.stateGo('weather')">Weather</md-button>
+    <md-button aria-label="Sensor Graphs" class="md-raised md-primary" ng-click="vm.stateGo('sensorGraph')">Sensor Graphs</md-button>
 
-    <md-button aria-label="Admin" class="md-raised md-primary" ng-click="stateGo('admin')">Admin</md-button>
+    <md-button aria-label="Admin" class="md-raised md-primary" ng-click="vm.stateGo('admin')">Admin</md-button>
     <md-button aria-label="Log Reports" class="md-raised md-primary" disabled>Log Reports</md-button>
     <md-button aria-label="Source Catalogues" class="md-raised md-primary" disabled>Source Catalogues</md-button>
 
-
-    <!--<button class="md-primary"></button>-->
-    <!--<button class="md-primary"></button>-->
-    <!--<button class="md-primary"></button>-->
-
-
-    <!--<button class="md-primary"></button>-->
-    <!--<button class="md-primary"></button>-->
-    <!--<button class="md-primary"></button>-->
-
-    <!--<button class="md-primary"></button>-->
-    <!--<button class="md-primary"></button>-->
-    <!--<button class="md-primary"></button>-->
 </section>
