--- a/app/alarms/alarms.html
+++ b/app/alarms/alarms.html
@@ -1,30 +1,30 @@
-<div class="view-container" ng-controller="AlarmsCtrl" layout="vertical">
+<div class="view-container" ng-controller="AlarmsCtrl as vm" layout="vertical">
 
     <div class="md-whiteframe-z1" layout="vertical">
         <md-toolbar class="panel-toolbar">
             <div class="md-toolbar-tools" layout="horizontal">
                <span>
-                    <md-checkbox ng-model="selectAllAlarms" ng-click="toggleSelectAllAlarms(!selectAllAlarms)" aria-label="Select All Alarms">
+                    <md-checkbox ng-model="vm.selectAllAlarms" ng-click="vm.toggleSelectAllAlarms(!vm.selectAllAlarms)" aria-label="Select All Alarms">
                         <b>Current Alarms</b>
                     </md-checkbox>
                     <md-tooltip>Select All Alarms</md-tooltip>
                 </span>
                 <span flex></span>
                 <section md-theme="blue" layout="horizontal" layout-align="center center" class="alarms-buttons">
-                    <md-button ng-click="knowSelectedAlarms()" aria-label="Add as Known" class="md-primary md-raised">Add as Known</md-button>
-                    <md-button ng-click="acknowledgeSelectedAlarms()" aria-label="Acknowledge" class="md-primary md-raised">Acknowledge</md-button>
-                    <md-button ng-click="clearSelectedAlarms()" aria-label="Clear" class="md-primary md-raised">Clear</md-button>
-                    <md-checkbox class="alarms-tools-checkbox" ng-model="showClearedAlarms" aria-label="Show Cleared Alarms">Show Cleared Alarms</md-checkbox>
-                    <md-checkbox class="alarms-tools-checkbox" ng-model="showLargeAlarms" aria-label="Show Detailed Alarm Notifications">Show Detailed Alarm Notifications</md-checkbox>
-                    <md-text-float md-theme="none" style="font-size: 14px; margin-top: -5px;" type="search" ng-model="q" label="Search Alarms..."></md-text-float>
+                    <md-button ng-click="vm.knowSelectedAlarms()" aria-label="Add as Known" class="md-primary md-raised">Add as Known</md-button>
+                    <md-button ng-click="vm.acknowledgeSelectedAlarms()" aria-label="Acknowledge" class="md-primary md-raised">Acknowledge</md-button>
+                    <md-button ng-click="vm.clearSelectedAlarms()" aria-label="Clear" class="md-primary md-raised">Clear</md-button>
+                    <md-checkbox class="alarms-tools-checkbox" ng-model="vm.showClearedAlarms" aria-label="Show Cleared Alarms">Show Cleared Alarms</md-checkbox>
+                    <md-checkbox class="alarms-tools-checkbox" ng-model="vm.showLargeAlarms" aria-label="Show Detailed Alarm Notifications">Show Detailed Alarm Notifications</md-checkbox>
+                    <md-text-float md-theme="none" style="font-size: 14px; margin-top: -5px;" type="search" ng-model="vm.q" label="Search Alarms..."></md-text-float>
                 </section>
             </div>
         </md-toolbar>
-        <section class="alarms-list alarms-list-large" ng-click="selectAllAlarms = false">
+        <section class="alarms-list alarms-list-large" ng-click="vm.selectAllAlarms = false">
             <md-list>
-                <md-item ng-repeat="item in alarmsData | orderBy:'dateUnix' | filter:q as results">
+                <md-item ng-repeat="item in vm.alarmsData | orderBy:'dateUnix' | filter:vm.q as results">
                     <md-item-content ng-click="item.selected = !item.selected"
-                                     ng-if="showClearedAlarms || item.priority !== 'cleared'"
+                                     ng-if="vm.showClearedAlarms || item.priority !== 'cleared'"
                                      ng-switch="item.severity"
                                      ng-class="{'alarm-list-item-badge-warn': item.severity === 'warn',
                     'alarm-list-item-badge-error': item.severity === 'error',
@@ -55,10 +55,10 @@
                             </span>
                         </div>
                         <div class="md-tile-content alarms-list-item-content" layout="horizontally" layout-padding style="z-index: 1">
-                            <h3 flex style="max-width: 170px;"><b>{{item.date}}</b></h3>
-                            <h4 flex style="max-width: 100px; text-overflow: ellipsis"><i>{{item.priority}}</i></h4>
-                            <h4 flex style="max-width: 260px; text-overflow: ellipsis">{{item.name}}</h4>
-                            <h4 flex>{{item.message}}</h4>
+                            <h3 flex style="max-width: 170px;"><b>{{vm.item.date}}</b></h3>
+                            <h4 flex style="max-width: 100px; text-overflow: ellipsis"><i>{{vm.item.priority}}</i></h4>
+                            <h4 flex style="max-width: 260px; text-overflow: ellipsis">{{vm.item.name}}</h4>
+                            <h4 flex>{{vm.item.message}}</h4>
                         </div>
 
                         <div class="background-div background-gradient-div-warn" ng-switch-when="warn"></div>
@@ -69,12 +69,12 @@
                         <div class="background-div background-gradient-div-maintenance" ng-switch-when="maintenance"></div>
                     </md-item-content>
                 </md-item>
-                <md-item ng-if="results.length === 0 && alarmsData.length !== 0">
+                <md-item ng-if="results.length === 0 && vm.alarmsData.length !== 0">
                     <b>No results found...</b>
                 </md-item>
             </md-list>
 
-            <div ng-if="alarmsData.length === 0">No Current Alarms</div>
+            <div ng-if="vm.alarmsData.length === 0">No Current Alarms</div>
         </section>
     </div>
 
@@ -83,26 +83,26 @@
             <div class="md-toolbar-tools" layout="horizontal">
 
                <span>
-                    <md-checkbox ng-model="selectAllKnownAlarms" ng-click="toggleSelectAllKnownAlarms(!selectAllKnownAlarms)" aria-label="Select All Known Alarms">
+                    <md-checkbox ng-model="vm.selectAllKnownAlarms" ng-click="vm.toggleSelectAllKnownAlarms(!vm.selectAllKnownAlarms)" aria-label="Select All Known Alarms">
                         <b>Known Alarms</b>
                     </md-checkbox>
                     <md-tooltip>Select All Known Alarms</md-tooltip>
                 </span>
                 <span flex></span>
                 <section md-theme="blue" layout="horizontal" layout-align="center center" class="alarms-buttons">
-                    <md-button ng-click="cancelKnowSelectedAlarms()" aria-label="Cancel Known" class="md-primary md-raised">Cancel Known</md-button>
-                    <md-checkbox class="alarms-tools-checkbox" ng-model="showKnownNominalAlarms" aria-label="Show Nominal">Show Nominal</md-checkbox>
-                    <md-checkbox class="alarms-tools-checkbox" ng-model="showKnownMaintenanceAlarms" aria-label="Show Maintenance">Show Maintenance</md-checkbox>
-                    <md-text-float md-theme="none" style="font-size: 14px; margin-top: -5px;" type="search" ng-model="q2" label="Search Known Alarms..."></md-text-float>
+                    <md-button ng-click="vm.cancelKnowSelectedAlarms()" aria-label="Cancel Known" class="md-primary md-raised">Cancel Known</md-button>
+                    <md-checkbox class="alarms-tools-checkbox" ng-model="vm.showKnownNominalAlarms" aria-label="Show Nominal">Show Nominal</md-checkbox>
+                    <md-checkbox class="alarms-tools-checkbox" ng-model="vm.showKnownMaintenanceAlarms" aria-label="Show Maintenance">Show Maintenance</md-checkbox>
+                    <md-text-float md-theme="none" style="font-size: 14px; margin-top: -5px;" type="search" ng-model="vm.q2" label="Search Known Alarms..."></md-text-float>
                     <span flex></span>
                 </section>
             </div>
         </md-toolbar>
 
-        <section class="alarms-list alarms-list-small" ng-click="selectAllKnownAlarms = false">
+        <section class="alarms-list alarms-list-small" ng-click="vm.selectAllKnownAlarms = false">
             <md-list>
-                <md-item ng-repeat="item in knownAlarmsData  | orderBy:'dateUnix' | filter:q2 as resultsKnown">
-                    <md-item-content ng-if="(showKnownNominalAlarms || item.severity !== 'nominal') && (showKnownMaintenanceAlarms || item.severity !== 'maintenance')"
+                <md-item ng-repeat="item in vm.knownAlarmsData  | orderBy:'dateUnix' | filter:vm.q2 as resultsKnown">
+                    <md-item-content ng-if="(vm.showKnownNominalAlarms || item.severity !== 'nominal') && (vm.showKnownMaintenanceAlarms || item.severity !== 'maintenance')"
                                      ng-click="item.selected = !item.selected"
                                      ng-switch="item.severity"
                                      ng-class="{'alarm-list-item-badge-warn': item.severity === 'warn',
@@ -148,12 +148,12 @@
                         <div class="background-div background-gradient-div-maintenance" ng-switch-when="maintenance"></div>
                     </md-item-content>
                 </md-item>
-                <md-item ng-if="resultsKnown.length === 0 && knownAlarmsData.length !== 0">
+                <md-item ng-if="resultsKnown.length === 0 && vm.knownAlarmsData.length !== 0">
                     <b>No results found...</b>
                 </md-item>
             </md-list>
 
-            <div ng-if="knownAlarmsData.length === 0">No Current Known Alarms</div>
+            <div ng-if="vm.knownAlarmsData.length === 0">No Current Known Alarms</div>
         </section>
     </div>
 </div>
