--- a/app/login-form/login-form.html
+++ b/app/login-form/login-form.html
@@ -1,24 +1,15 @@
-<div class="md-whiteframe-z4 login-form" ng-controller="LoginFormCtrl">
-
-
+<div class="md-whiteframe-z4 login-form" ng-controller="LoginFormCtrl as vm">
     <div layout="vertical" layout-align="center center">
         <md-toolbar class="md-theme-dark md-tall" layout-align="center center">
             <h1>katGUI</h1>
-
-
         </md-toolbar>
-
         <md-content md-theme="blue">
-            <form ng-submit="login(credentials)" layout="vertical" layout-align="center center" layout-padding>
-
-                <md-text-float class="long-input" flex type="text" ng-model="credentials.username" label="Username"></md-text-float>
-                <md-text-float class="long-input" flex type="password" ng-model="credentials.password" label="Password"></md-text-float>
-
+            <form ng-submit="vm.login(vm.credentials)" layout="vertical" layout-align="center center" layout-padding>
+                <md-text-float class="long-input" flex type="text" ng-model="vm.credentials.username" label="Username"></md-text-float>
+                <md-text-float class="long-input" flex type="password" ng-model="vm.credentials.password" label="Password"></md-text-float>
                 <md-button aria-label="Login" type="submit" class="md-raised md-primary">Login</md-button>
-
-                <a flex href="" ng-click="forgotPassword()">Forgot your password?</a>
+                <a flex href="" ng-click="vm.forgotPassword()">Forgot your password?</a>
             </form>
         </md-content>
-
     </div>
 </div>
