--- a/app/sensor-graph/sensor-graph.html
+++ b/app/sensor-graph/sensor-graph.html
@@ -1,7 +1,7 @@
-<div class="view-container" ng-controller="SensorGraphCtrl">
+<div class="view-container" ng-controller="SensorGraphCtrl as vm">
     <!--<d3-bars data="d3Data"></d3-bars>-->
 
-    <d3-wind-rose data="d3WindRoseData"></d3-wind-rose>
+    <d3-wind-rose data="vm.d3WindRoseData"></d3-wind-rose>
 
     <!--<d3-line data="d3LineData" datasize="d3LineDataSize"></d3-line>-->
 
